mosquitto/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: arm64v8/eclipse-mosquitto
        securityContext:
          privileged: true
        ports:
        - containerPort: 1883
        - containerPort: 9001
        volumeMounts:
        - name: mqtt-config
          mountPath: /mosquitto/config
        - name: mqtt-data
          mountPath: /mosquitto/data
        - name: mqtt-log
          mountPath: /mosquitto/log
      volumes:
      - name: mqtt-config
        persistentVolumeClaim:
          claimName: mqtt-config-claim
      - name: mqtt-data
        persistentVolumeClaim:
          claimName: mqtt-data-claim
      - name: mqtt-log
        persistentVolumeClaim:
          claimName: mqtt-log-claim
